src/human_study/program_38/python_err_msg.txt
File "./seq2parse/human_study/program_38/original.py", line 9
    print(eCount(Write one sentence))
                 ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
